--- a/html/tovar.html
+++ b/html/tovar.html
@@ -12,7 +12,7 @@
         <div id="navbar" class="header">
             <header >
                 <h1>Крым-Мебель</h1>
-                <a href="../html/index.html">Главаная</a>
+                <a href="../index.html">Главаная</a>
                 <a href="../html/tovar.html">Товары</a>
                 <a href="">О компании</a>
                 <div class="section">
